# osaa-poc

./: .gitattributes  .gitignore  README.md  justfile  pyproject.toml  requirements.txt
dashboards/marimo/: poc.py
dashboards/marimo/examples/: reactive_quak.py
dashboards/observable/: <_io.TextIOWrapper name='<stdout>' mode='w' encoding='utf-8'>  README.md  observablehq.config.js  package-lock.json
dashboards/observable/src/: index.md  table.md
dashboards/observable/src/components/: table.js
dashboards/observable/src/data/: masterpy.csv.py  mastersh.parquet.sh  missing.csv  missingLoader.csv.py
src/osaa_pipeline/: config.py  test_extract.py  utils.py
src/osaa_pipeline/etl/: extract.py  run.py
src/osaa_pipeline/ingest/: run.py
src/pipeline/: config.py
src/pipeline/etl/: __init__.py  extract.py  run.py  transform.py
src/pipeline/etl/sources/: __init__.py  wdi.py
src/pipeline/ingest/: run.py
